<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/olive">


    <ImageView
        android:id="@+id/photomatLogo"
        android:layout_width="222dp"
        android:layout_height="222dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="95dp"
        android:contentDescription="@string/photomat_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/photomat_icon_color"/>

    <EditText
        android:id="@+id/textUsernameLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_username"
        android:inputType="textNoSuggestions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photomatLogo"/>

    <EditText
        android:id="@+id/textPasswordLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textUsernameLogin"/>
    <Button
        android:id="@+id/buttonSignUpLogin"
        android:layout_width="284dp"
        android:layout_height="61dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPasswordLogin"/>

    <Button
        android:id="@+id/buttonLoginLogin"
        android:layout_width="284dp"
        android:layout_height="61dp"
        android:background="@drawable/custom_button"
        android:text="@string/log_in"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignUpLogin"/>

</androidx.constraintlayout.widget.ConstraintLayout>
